# CMakeList.txt : CMake project for 3D_Reconstruction, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (3D_Reconstruction "Main.cpp" "3D_Reconstruction.h")

# TODO: Add tests and install targets if needed.
